@@ -238,14 +238,16 @@ Modalbox.Methods = {
 	_putContent: function(){
 		// Prepare and resize modal box for content
 		if(this.options.height == this._options.height)
-			Modalbox.resize(0, this.MBcontent.getHeight() - Element.getHeight(this.MBwindow) + Element.getHeight(this.MBheader), {
-				afterResize: function(){
-					this.MBcontent.show();
-					this.focusableElements = this._findFocusableElements();
-					this._setFocus(); // Setting focus on first 'focusable' element in content (input, select, textarea, link or button)
-					this.event("afterLoad"); // Passing callback
-				}.bind(this)
-			});
+			setTimeout(function() { // MSIE sometimes doesn't display content correctly
+				Modalbox.resize(0, this.MBcontent.getHeight() - Element.getHeight(this.MBwindow) + Element.getHeight(this.MBheader), {
+					afterResize: function(){
+							this.MBcontent.show();
+							this.focusableElements = this._findFocusableElements();
+							this._setFocus(); // Setting focus on first 'focusable' element in content (input, select, textarea, link or button)
+							this.event("afterLoad"); // Passing callback
+					}.bind(this)
+				});
+			}.bind(this), 1);
 		else { // Height is defined. Creating a scrollable window
 			this._setWidth();
 			this.MBcontent.setStyle({overflow: 'auto', height: Element.getHeight(this.MBwindow) - Element.getHeight(this.MBheader) - 13 + 'px'});
