@@ -1,4 +1,4 @@
-<form action="#" method="get" accept-charset="utf-8" onsubmit="Modalbox.show('_ajax_content.html', {title: 'Step 2', width: 300}); return false;">
+<form action="#" method="get" accept-charset="utf-8" onsubmit="Modalbox.show('_ajax_form.html', {title: 'Step 2', width: 500}); return false;">
 	<fieldset>
 		<input type="hidden" name="hidden" value="111" id="hidden" /> <br />
 		
