@@ -26,7 +26,7 @@
 	
 	<ul>
 		<li><a href="_ajax_js.html" title="Modalbox JS passing test" onclick="Modalbox.show(this.href, {title: this.title, width: 300, afterLoad: function(){ passValue('Current document') } }); return false;">Modalbox JS passing test</a></li>
-		<li><a href="_ajax_form.html?v=7" title="Modalbox Prevent Scroll Test" onclick="Modalbox.show(this.href, {title: this.title, overlayClose: false}); return false;">Modalbox 'TAB'-key Handler &amp; Prevent Scroll Test</a></li>
+		<li><a href="_ajax_form.html?v=9" title="Modalbox Prevent Scroll Test" onclick="Modalbox.show(this.href, {title: this.title}); return false;">Modalbox 'TAB'-key Handler &amp; Prevent Scroll Test</a></li>
 		
 		<script type="text/javascript" charset="utf-8">
 			var node = Builder.node("div", {className: "warning", style: "border: 1px solid #0F0"}, [
